--- a/trunk/bochs/configure.in
+++ b/trunk/bochs/configure.in
@@ -14,8 +14,8 @@ VER_MINOR=7
 dnl // this should be > 90 for pre-release of next version otherwise revision level
 VER_REVISION=0
 dnl // this should be 0 for release and 1 for svn version
-VER_SVN=0
-REL_STRING="Built from SVN snapshot on August  1, 2021"
+VER_SVN=1
+REL_STRING="Built from SVN snapshot after release 2.7"
 REL_TIMESTAMP=`grep "Updated:" $srcdir/README | sed 's/Updated: //'`
 
 changequote(<<, >>)
